# maimai-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  E2E_TEST_REPORT.md  README.md  TESTING_SUMMARY.md  TEST_RESULTS.txt  VERIFICATION_REPORT.md  compose.discord_bot.yaml  compose.record_collector.yaml  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml  vite.config.js  vite.config.ts  wrangler.jsonc
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  main.rs  rating.rs  state.rs
backend/src/routes/: cover.rs  health.rs  mod.rs  player.rs  recent.rs  responses.rs  scores.rs  today.rs
backend/src/tasks/: mod.rs  polling.rs  songdb.rs  startup.rs
crates/http-client/: Cargo.toml
crates/http-client/src/: lib.rs
crates/maimai-client/: Cargo.toml
crates/maimai-client/src/: lib.rs
crates/maimai-parsers/: Cargo.toml
crates/maimai-parsers/examples/maimai/internal_level_pages/: level10.html  level11.html  level12.html  level13.html  level14.html  level15.html  level16.html  level17.html  level18.html  level19.html  level20.html  level21.html  level22.html  level23.html  level7.html  level8.html  level9.html
crates/maimai-parsers/examples/maimai/music_detail/: missing_artist.html  missing_title.html
crates/maimai-parsers/examples/maimai/player_data/: player_data.html
crates/maimai-parsers/examples/maimai/rating_target/: rating_target_music.html
crates/maimai-parsers/examples/maimai/scores/: diff0_basic.html  diff2_expert.html  diff3_master.html  diff4_remaster.html  version0_maimai_diff0.html  version17_universe_diff0.html
crates/maimai-parsers/src/: internal_level_page.rs  lib.rs  player_data.rs  playlog_detail.rs  rating_target.rs  recent.rs  score_list.rs  song_detail.rs
crates/maimai-parsers/tests/: parse_internal_level_pages.rs  parse_player_data.rs  parse_playlog_detail.rs  parse_rating_target_music.rs  parse_recent.rs  parse_scores.rs  parse_song_detail.rs
crates/maimai-songdb/: Cargo.toml
crates/maimai-songdb/examples/maimai/intl_version/: version4_orange_diff0.html
crates/maimai-songdb/examples/maimai/official/: maimai_songs.json
crates/maimai-songdb/src/: aliases.rs  internal_levels.rs  intl_only.rs  lib.rs  manual_override.rs  sheet_versions.rs  user_tiers.rs
crates/maimai-songdb/src/data/: intl_only.json  intl_version_duplicate_resolution.json  manual_override.json  spreadsheets.json  title_mappings.json  user_tier_sheets.json
discord/: .env.example  Cargo.toml  Dockerfile
discord/src/: client.rs  commands.rs  config.rs  dm.rs  embeds.rs  main.rs
docs/: PLAN.md
maistats-discord-bot/: Cargo.toml
maistats-discord-bot/migrations/: 20260310000000_create_discord_user_record_collectors.sql  20260412000000_create_updown_sessions.sql
maistats-discord-bot/src/: chart_links.rs  client.rs  commands.rs  config.rs  db.rs  dm.rs  embeds.rs  emoji.rs  main.rs  plot.rs  updown.rs
maistats-record-collector/: Cargo.toml
maistats-record-collector/migrations/: 20260122000000_playlogs_credit_and_flags.sql  20260223000000_decouple_song_info_columns.sql  20260227000000_rebuild_scores_table.sql  20260304000000_remove_first_play_from_playlogs.sql  20260304001000_rename_credit_play_count_to_credit_id.sql  20260305000000_add_song_identity_columns.sql
maistats-record-collector/src/: config.rs  db.rs  error.rs  http_client.rs  lib.rs  logging.rs  main.rs  rating.rs  state.rs
maistats-record-collector/src/routes/: health.rs  logs.rs  mod.rs  player.rs  poll.rs  rating.rs  recent.rs  responses.rs  scores.rs  version.rs
maistats-record-collector/src/tasks/: mod.rs
maistats-record-collector/src/tasks/polling/: cycle.rs  mod.rs  scheduler.rs
maistats-record-collector/src/tasks/startup/: mod.rs
maistats-record-collector/src/tasks/utils/: auth.rs  mod.rs  player.rs  playlog_detail.rs  recent.rs  reporting.rs  scores.rs  song_detail.rs  source.rs
maistats-record-collector/tests/: collector_sync.rs
maistats-record-collector/tests/fixtures/collector_sync/polling_partial_resolve_keeps_playlogs/: expected_app_state.json  expected_playlogs.json  source.json
maistats-record-collector/tests/fixtures/collector_sync/polling_unchanged_skips_recent/: source.json
maistats-record-collector/tests/fixtures/collector_sync/polling_unresolved_only_keeps_playlogs/: expected_app_state.json  expected_playlogs.json  source.json
maistats-song-info/: Cargo.toml
maistats-song-info/src/: config.rs  main.rs  state.rs
maistats-song-info/src/routes/: mod.rs  songs.rs
maistats-song-info/src/songdb/: aliases.rs  internal_levels.rs  manual_override.rs  mod.rs  sheet_versions.rs
maistats-song-info/src/songdb/data/: ko_generated_aliases.tsv  manual_override.json  title_mappings.json
maistats-song-info/src/tasks/: mod.rs  songdb.rs
personal-discord-bot/: Cargo.toml
personal-discord-bot/src/: client.rs  commands.rs  config.rs  embeds.rs  lib.rs  main.rs  rating_image.rs
record-collector-server/: .env.example  Cargo.toml
record-collector-server/migrations/: 20260116000000_init.sql
record-collector-server/src/: config.rs  db.rs  error.rs  http_client.rs  main.rs  song_info_client.rs  state.rs
record-collector-server/src/backup/: mod.rs  s3.rs  service.rs  snapshot.rs  url.rs
record-collector-server/src/routes/: health.rs  mod.rs  player.rs  rating.rs  recent.rs  responses.rs  scores.rs  today.rs
record-collector-server/src/tasks/: mod.rs  polling.rs  scores_sync.rs  startup.rs  sync_shared.rs
record-collector-server/src/tasks/polling/: cycle.rs  mod.rs  scheduler.rs
record-collector-server/src/tasks/startup/: bootstrap.rs  mod.rs
record-collector-server/src/tasks/utils/: auth.rs  detail_hydration.rs  mod.rs  player.rs  playlog_detail.rs  recent.rs  reporting.rs  scores.rs
record-collector-server/tests/: db_migrations.rs
scripts/: mai_plot.py  (+4 more)
song-info-server/: .env.example  Cargo.toml
song-info-server/src/: config.rs  error.rs  main.rs  state.rs
song-info-server/src/routes/: cover.rs  health.rs  mod.rs  songs.rs
song-info-server/src/tasks/: mod.rs  songdb.rs
(+212 files in other folders)
