[package]
name = "maimai-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
cookie_store = { version = "0.22.0", features = ["serde_json"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
ordered-float = "5.1.0"
poise = "0.6.1"
reqwest = { version = "0.12.28", features = ["rustls-tls", "cookies", "gzip", "brotli", "deflate", "json"] }
reqwest_cookie_store = { version = "0.9.0", features = ["serde"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
strum = { version = "0.27.2", features = ["derive"] }
time = { version = "0.3.45", features = ["local-offset"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"
