[package]
name = "maimai-bot"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
cookie_store = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
ordered-float = { workspace = true }
poise = { workspace = true }
reqwest = { workspace = true }
reqwest_cookie_store = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
