[package]
name = "maimai-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "maimai-backend"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
maimai-db = { path = "../crates/db" }
maimai-http-client = { path = "../crates/http-client" }
maimai-parsers = { path = "../crates/maimai-parsers" }
maimai-songdb = { path = "../crates/maimai-songdb" }
models = { path = "../crates/models" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true, features = ["macros", "local-offset"] }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
