[package]
name = "maimai-discord"
version.workspace = true
edition.workspace = true

[[bin]]
name = "maimai-discord"
path = "src/main.rs"

[dependencies]
dotenvy = { workspace = true }
eyre = { workspace = true }
models = { path = "../crates/models" }
ordered-float = { workspace = true }
poise = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
strsim = { workspace = true }
time = { workspace = true, features = ["local-offset"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
