[package]
name = "maistats-discord-bot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "maistats-discord-bot"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
dotenvy = { workspace = true }
eyre = { workspace = true }
image = "0.25.9"
models = { path = "../crates/models" }
ordered-float = { workspace = true }
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "line_series", "ttf"] }
poise = { workspace = true }
rand.workspace = true
reqwest = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
sqlx.workspace = true
strsim = { workspace = true }
time = { workspace = true, features = ["local-offset"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
