[package]
name = "maistats-song-info"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
eyre.workspace = true
dotenvy.workspace = true
hex.workspace = true
maimai-auth = { path = "../crates/maimai-auth" }
maimai-parsers = { path = "../crates/maimai-parsers" }
models = { path = "../crates/models" }
reqwest.workspace = true
sha2.workspace = true
