[package]
name = "record-collector-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "record-collector-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cookie_store = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
maimai-parsers = { path = "../crates/maimai-parsers" }
models = { version = "0.1.0", path = "../crates/models" }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
reqwest_cookie_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true, features = ["macros", "local-offset"] }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding.workspace = true

[dev-dependencies]
