[package]
name = "maimai-http-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
reqwest_cookie_store = { workspace = true }
cookie_store = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

[dependencies.models]
path = "../models"
