[package]
name = "maimai-http-client"
version.workspace = true
edition.workspace = true

[dependencies]
cookie_store = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true }
reqwest_cookie_store = { workspace = true }
time = { workspace = true }

[dependencies.models]
path = "../models"
