[package]
name = "maimai-client"
version.workspace = true
edition.workspace = true

[dependencies]
eyre = { workspace = true }
models = { path = "../models" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
