[package]
name = "maimai-parsers"
version.workspace = true
edition.workspace = true

[dependencies]
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
strum = { workspace = true }
ordered-float = { workspace = true }
models = { path = "../models" }
