[package]
name = "maimai-songdb"
version.workspace = true
edition.workspace = true

[[bin]]
name = "maimai-songdb"
path = "src/bin/maimai-songdb.rs"

[dependencies]
clap.workspace = true
dotenvy.workspace = true
tracing-subscriber.workspace = true
chrono = "0.4.43"
chrono-tz = "0.10.4"
eyre.workspace = true
hex = "0.4.3"
image = { version = "0.25.9", features = ["webp"] }
models = { path = "../models" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
scraper.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10.9"
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing = "0.1.44"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile.workspace = true
