[package]
name = "maimai-songdb"
version.workspace = true
edition.workspace = true

[[bin]]
name = "maimai-songdb"
path = "src/bin/maimai-songdb.rs"

[dependencies]
clap.workspace = true
dotenvy.workspace = true
eyre.workspace = true
hex = { workspace = true }
models = { path = "../models" }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing = { workspace = true }
tracing-subscriber.workspace = true
urlencoding = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
