[package]
name = "maimai-songdb"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
dotenvy.workspace = true
eyre.workspace = true
hex = { workspace = true }
image = "0.25.9"
models = { path = "../models" }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing = { workspace = true }
tracing-subscriber.workspace = true
urlencoding = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
